--- a/low_mach.tex
+++ b/low_mach.tex
@@ -1000,20 +1000,13 @@ The initial conditions (density in $kg.m^{-3}$, velocity in $m.s^{-1}$, pressure
 \begin{center}
 \begin{tabular}{|c|c|c || c|c|c|}
 \hline
-$\rho_{right}$ & $u_{right}$ & $P_{right}$ & $\rho_{left}$ & $u_{left}$ & $P_{left}$ \\
-\hline
-\multicolumn{6}{ |c| }{Leblanc shock tube (\sct{sec:Leblanc})} \\
-\hline
-1 & 0 & $4$ $10^{-2}$ & $10^{-3}$ & 0 & $4$ $10^{-11}$  \\
-\hline \hline
-\multicolumn{6}{ |c| }{Strong shock for liquid phase (\sct{sec:liquid_shock})} \\
-\hline
-$1$ & $0$ & $4$ $10^{-4}$ & $10^{-3}$ & $0$ & $4$ $10^{-11}$  \\
-\hline
-\multicolumn{6}{ |c| }{Slow moving shock (\sct{sec:slow_moving_shock})} \\
-\hline \hline
-$1$ & $-0.81$ & $1$ & $3.86$ & $-3.44$ & $10.33$   \\
-\hline
+$\rho_{right}$ & $u_{right}$ & $P_{right}$ & $\rho_{left}$ & $u_{left}$ & $P_{left}$ \\ \hline
+\multicolumn{6}{ |c| }{Leblanc shock tube (\sct{sec:Leblanc})}                       \\ \hline
+1 & 0 & $4$ $10^{-2}$ & $10^{-3}$ & 0 & $4$ $10^{-11}$                               \\ \hline \hline
+\multicolumn{6}{ |c| }{Strong shock for liquid phase (\sct{sec:liquid_shock})}       \\ \hline
+$1$ & $0$ & $4$ $10^{-4}$ & $10^{-3}$ & $0$ & $4$ $10^{-11}$                         \\ \hline
+\multicolumn{6}{ |c| }{Slow moving shock (\sct{sec:slow_moving_shock})}              \\ \hline \hline
+$1$ & $-0.81$ & $1$ & $3.86$ & $-3.44$ & $10.33$                                     \\ \hline
 \end{tabular}
 \end{center}
 \caption{\label{tbl:ic_1d_tests} Initial conditions for the 1-D shock tube tests.}
@@ -1030,21 +1023,22 @@ For each simulation, data relative to the boundary conditions, the Courant-Fried
 P = (\gamma-1) \rho (e-q) - \gamma P_\infty
 \end{equation}
 %
-where the parameters $q$ and $P_\infty$ are fluid-dependent. The values we employed are given in \tbl{tbl:stff_gas_eos}. 
+where the parameters $q$ and $P_\infty$ are fluid-dependent. The values we employed are given in \tbl{tbl:stff_gas_eos}. The ideal gas equation of state is recovered by setting $q=P\infty=0$ in \eqt{eq:eos}. 
 %
 \begin{table}[!htbp]
 \begin{center}
-\caption{\label{tbl:stff_gas_eos} Stiffened Gas Equation of State parameters for steam and liquid water.}
+\caption{\label{tbl:stff_gas_eos} Stiffened Gas Equation of State parameters for steam and liquid water.\\ \tcr{check my mods}}
 \begin{tabular}{|c|c|c|c|c|}
  \hline
-\text{fluid} & $\gamma$ & $C_v$ $(J\cdot kg^{-1} \cdot K^{-1})$ & $P_\infty$ $(Pa)$ & $q$ $(J \cdot kg^{-1})$ \\ \hline
-steam & 1.43 & 1040 & 0 & $2030.10^3$                \\  \hline
-liquid water & 2.35 & 1816 & $10^9$ & $-1167.10^3$   \\  \hline
+\text{fluid}                           & $\gamma$ & $C_v$ $(J.kg^{-1}.K^{-1})$ & $P_\infty$ $(Pa)$ & $q$ $(J.kg^{-1})$ \\  \hline \hline
+liquid water (\sct{sec:liquid_nozzle}) & 2.35     & 1816                       & $10^9$            & $-1167\ 10^3$     \\  \hline
+steam        (\sct{sec:steam_nozzle})  & 1.43     & 1040                       & 0                 & $ 2030\ 10^3$     \\  \hline
+liquid water (\sct{sec:liquid_shock})  & 4.4      & 1000                       & $ 6\ 10^8$        & $          0$     \\  \hline
 \end{tabular}
 \end{center}
 \end{table}
 %
-The ideal gas equation of state is recovered by setting $q=P\infty=0$ in \eqt{eq:eos}. 
+
 The entropy function for the stiffened gas equation of state is convex and given by
 %
 \begin{equation*}
